# script-box

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  设计文档.md
.github/workflows/: release.yml
docs/: release.md
scripts/: make-update-feed.ps1  package.ps1  release.ps1
src/common/: Dto.h
src/core/: CoreService.cpp  CoreService.h  LoggingBridge.cpp  LoggingBridge.h
src/core/workers/: EnvWorker.cpp  EnvWorker.h  JobWorker.cpp  JobWorker.h  ScanWorker.cpp  ScanWorker.h  SelfTestWorker.cpp  SelfTestWorker.h
src/ui/: DynamicForm.cpp  DynamicForm.h  MainWindow.cpp  MainWindow.h  ToolWindow.cpp  ToolWindow.h
src/updater/: main.cpp
tools/example_tool/: tool.yaml
tools/example_tool/scripts/: run.py
tools/python_plot_demo/: tool.yaml
tools/python_plot_demo/scripts/: generate_plot.py
tools/python_table_demo/: tool.yaml
tools/python_table_demo/scripts/: generate_table.py
tools/r_plot_demo/: tool.yaml
tools/r_plot_demo/scripts/: generate_plot.R
tools/r_table_demo/: tool.yaml
tools/r_table_demo/scripts/: generate_table.R
